Updated xmonad configuration files.

--- a/xmonad/_/usr/share/xsessions/xmonad-gnome.desktop
+++ b/xmonad/_/usr/share/xsessions/xmonad-gnome.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=XMonad GNOME
 Comment=This session logs you into GNOME with the traditional panel
-Exec=gnome-session-xmonad
 TryExec=gnome-session
+Exec=gnome-session --session=xmonad
 Icon=xmonad.png
 Type=Application
