--- a/xmonad/_/usr/share/xsessions/xmonad-unity.desktop
+++ b/xmonad/_/usr/share/xsessions/xmonad-unity.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=XMonad Unity
 Comment=Tiling window manager
-TryExec=/usr/bin/gnome-session
+TryExec=gnome-session
 Exec=gnome-session --session=xmonad-unity
 Icon=xmonad.png
 Type=XSession
