Improvements to install scripts. Added more options.

--- a/SSH/~/.ssh/config
+++ b/SSH/~/.ssh/config
@@ -83,6 +83,30 @@ Host home_tunnel
 
     ServerAliveInterval 15
     ServerAliveCountMax 3
+    
+#=======================
+# Launchpad
+#=======================
+Host launchpad
+    Hostname bazaar.launchpad.net
+    IdentityFile  ~/.ssh/id_rsa_launchpad
+    User joshuaspence
+    
+#=======================
+# ScribTex
+#=======================
+Host scribtex
+    Hostname git.scribtex.com
+    IdentityFile  ~/.ssh/id_rsa_scribtex
+    User joshuaspence
+
+#=======================
+# GitHub
+#=======================
+Host github
+    Hostname git.github.com
+    IdentityFile  ~/.ssh/id_rsa_github
+    User joshuaspence
 
 #=======================
 # GLOBAL SETTINGS
