--- a/bash/~/.screenrc
+++ b/bash/~/.screenrc
@@ -1,12 +1,9 @@
-#===============================================================================
-# File: ~/.screenrc
-# Author: Joshua Spence <josh@joshuaspence.com>
-#===============================================================================
-#
-#-------------------------------------------------------------------------------
+# To print debug messages, run the command: `touch ~/.rcfiles.debug`
+[ -e ${HOME}/.rcfiles.debug ] && echo "Parsing ~/.screenrc..." >&2
+
+startup_message off
 
 shell -${SHELL}
-startup_message off
 altscreen on
 defbce on
 shelltitle "$ |bash"
@@ -16,7 +13,13 @@ term 'screen-s'
 vbell off
 
 # Display a line at the bottom with hostname, window titles & time.
-caption always '%{= kG}[ %{G}%H %{g}][%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{B} %d/%m %{W}%c %{g}]'
+hardstatus alwayslastline
+hardstatus string '%{= kG}[ %{G}%H %{g}][%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{B} %Y-%m-%d %{W}%C%a %{g}]'
 
 # Always send backspace as ^?, which is consistent with the bundled terminfo.
 bindkey -k kb stuff ^?
+
+for file in $(find ${HOME} -maxdepth 1 -type f -regextype posic-basic -regex ".*/.\+\.screenrc"); do
+    [ -e ${HOME}/.rcfiles.debug ] && echo "Sourcing ${file}..." >&2
+    source ${file}
+done
