--- a/ack-grep/home/.ackrc
+++ b/ack-grep/home/.ackrc
@@ -1,6 +1,9 @@
 # Always color, even if piping to a another program
 --color
 
+# Matches by file name with
+--group
+
 # Use "less -r" as my pager
 --pager=less -r
 
@@ -19,8 +22,21 @@
 # Ignore case in the search strings if PATTERN contains no uppercase characters.
 --smart-case
 
---type-add=vim=vimrc
---type-add=js=json
+# Types
+--type-add=ruby=.haml,.rake,.rsel,.builder,Gemfile
+--type-add=html=.html.erb,.html.haml
+--type-add=js=.js.erb
+--type-add=css=.sass,.less
 
 # Add types ack doesn't know about
 --type-set=MARKDOWN=md,mkd,markdown
+
+# Ignore these directories
+--ignore-dir=vendor
+--ignore-dir=log
+--ignore-dir=tmp
+--ignore-dir=doc
+--ignore-dir=rdoc
+--ignore-dir=coverage
+--sort-files
+--follow
