Minor changes to SSH config

--- a/ssh/home/.ssh/config
+++ b/ssh/home/.ssh/config
@@ -5,11 +5,13 @@ Host gunwatcher
     Hostname gunwatcher.joshuaspence.com
     User ec2-user
     IdentityFile ~/.ssh/ec2
+    PasswordAuthentication no
 
 Host pear
     Hostname pear.joshuaspence.com
     User ec2-user
     IdentityFile ~/.ssh/ec2
+    PasswordAuthentication no
 
 #===============================================================================
 # Personal
@@ -23,7 +25,7 @@ Host beretta
     Hostname beretta.ddns.joshuaspence.com
 
 #===============================================================================
-# HOME
+# Home
 #===============================================================================
 Host RT-N16
     Hostname home.ddns.joshuaspence.com
@@ -43,6 +45,8 @@ Host launchpad
     Hostname bazaar.launchpad.net
     IdentityFile  ~/.ssh/launchpad
     User joshuaspence
+    ForwardAgent no
+    PasswordAuthentication no
 
 #===============================================================================
 # ScribTex
@@ -51,6 +55,8 @@ Host scribtex
     Hostname git.scribtex.com
     IdentityFile  ~/.ssh/scribtex
     User joshuaspence
+    ForwardAgent no
+    PasswordAuthentication no
 
 #===============================================================================
 # GitHub
@@ -59,11 +65,14 @@ Host github
     Hostname git.github.com
     IdentityFile  ~/.ssh/github
     User joshuaspence
+    ForwardAgent no
+    PasswordAuthentication no
 
 #===============================================================================
-# GLOBAL SETTINGS
+# Global settings
 #===============================================================================
 Host *
     ForwardAgent yes
-    ForwardX11 yes
     Compression yes
+    PasswordAuthentication yes
+    CheckHostIP yes
