--- a/shell/home/.inputrc
+++ b/shell/home/.inputrc
@@ -10,21 +10,41 @@
 # programs: bash, irb, python, mysql, octave, etc.
 #-------------------------------------------------------------------------------
 
-# To print debug messages, run the command: `touch ~/.rcfiles.debug`
-[ -e ${HOME}/.rcfiles.debug ] && echo "Parsing ~/.inputrc..." >&2
+# Make tab autocomplete regardless of filename case.
+set completion-ignore-case on
 
-# Be 8 bit clean.
+# List all matches in case multiple possible completions are possible
+set show-all-if-ambiguous on
+
+# Immediately add a trailing slash when autocompleting symlinks to directories
+set mark-symlinked-directories on
+
+# Do not autocomplete hidden files unless the pattern explicitly begins with a dot
+set match-hidden-files off
+
+# Show all autocomplete results at once
+set page-completions off
+
+# If there are more than 200 possible completions for a word, ask to show them all
+set completion-query-items 200
+
+# Show extra file information when completing, like `ls -F` does
+set visible-stats on
+
+# Be more intelligent when autocompleting by also looking at the text after
+# the cursor. For example, when the current line is "cd ~/src/mozil", and
+# the cursor is on the "z", pressing Tab will not autocomplete it to "cd
+# ~/src/mozillail", but to "cd ~/src/mozilla". (This is supported by the
+# Readline used by Bash 4.)
+set skip-completed-text on
+
+# Allow UTF-8 input and output, instead of showing stuff like $'\0123\0456'
 set input-meta on
 set output-meta on
+set convert-meta off
 
-# To allow the use of 8bit-characters like the german umlauts, set convert-meta
-# to off. However this makes the meta key not work as a meta key, which is
-# annoying to those which don't need to type in 8-bit characters.
-set convert-meta on
-
-# Try to enable the application keypad when it is called. Some systems need this
-# to enable the arrow keys.
-#set enable-keypad on
+# Use Alt/Meta + Delete to delete the preceding word
+"\e[3;3~": kill-word
 
 # Do not bell on tab-completion.
 set bell-style none
@@ -35,58 +55,50 @@ set bell-style none
 # screen width rather than wrapping to a new line.
 set horizontal-scroll-mode off
 
-# Some defaults / modifications for the emacs mode.
-$if mode=emacs
-    # Allow the use of the Home/End keys.
-    "\e[1~": beginning-of-line
-    "\e[4~": end-of-line
+# Allow the use of the Home/End keys.
+"\e[1~": beginning-of-line
+"\e[4~": end-of-line
 
-    # Allow the use of the Delete/Insert keys.
-    "\e[3~": delete-char
-    "\e[2~": quoted-insert
+# Allow the use of the Delete/Insert keys.
+"\e[3~": delete-char
+"\e[2~": quoted-insert
 
-    # Mappings for "page up" and "page down" to step to the beginning/end of the
-    # history.
-    "\e[5~": beginning-of-history
-    "\e[6~": end-of-history
+# Mappings for "page up" and "page down" to step to the beginning/end of the
+# history.
+"\e[5~": beginning-of-history
+"\e[6~": end-of-history
 
-    # Alternate mappings for "page up" and "page down" to search the history.
-    #"\e[5~": history-search-backward
-    #"\e[6~": history-search-forward
+# Alternate mappings for "page up" and "page down" to search the history.
+#"\e[5~": history-search-backward
+#"\e[6~": history-search-forward
 
-    # By default up/down are bound to previous-history and next-history
-    # respectively. The following does the same but gives the extra
-    # functionality where if there is any text between the start of the line and
-    # the cursor, the subset of the history starting with that text is searched.
-    # Note to get rid of a line just Ctrl-C.
-    "\e[B": history-search-forward
-    "\e[A": history-search-backward
-    "\eOA": history-search-backward
-    "\eOB": history-search-forward
+# Use the text that has already been typed as the prefix for searching through
+# commands (i.e. more intelligent Up/Down behavior)
+#
+# By default up/down are bound to previous-history and next-history
+# respectively. The following does the same but gives the extra
+# functionality where if there is any text between the start of the line and
+# the cursor, the subset of the history starting with that text is searched.
+# Note to get rid of a line just Ctrl-C.
+"\e[B": history-search-forward
+"\e[A": history-search-backward
+"\eOA": history-search-backward
+"\eOB": history-search-forward
 
-    # Don't echo ^C etc (new in bash 4.1). Note this only works for the command
-    # line itself, not if already running a command.
-    set echo-control-characters off
+# Don't echo ^C etc (new in bash 4.1). Note this only works for the command
+# line itself, not if already running a command.
+set echo-control-characters off
 
-    # If set to on, readline performs filename matching and completion in a
-    # case-insensitive fashion. For example, typing 'cd h[tab]' will list the
-    # possibilities for 'cd H[tab]' and 'cd h[tab]'.
-    set completion-ignore-case on
+# If set to on, tilde expansion is performed when readline attempts word
+# completion. For example, typing 'cd ~/sr[tab]' expands to 'cd
+# /home/directory/src/' when expand-tilde is on and is unaltered when
+# expand-tilde is off.
+set expand-tilde off
 
-    # If there are more than this number of possible completions for a word, ask
-    # the user if they wants to see all of them.
-    set completion-query-items 150
-
-    # If set to on, tilde expansion is performed when readline attempts word
-    # completion. For example, typing 'cd ~/sr[tab]' expands to 'cd
-    # /home/directory/src/' when expand-tilde is on and is unaltered when
-    # expand-tilde is off.
-    set expand-tilde off
-
-    # If set to on, completed directory names have a slash appended. For example
-    # 'cd sr[tab]' expands to 'src/' when mark-directories is on and expands to
-    # 'src' when mark-directories is off.
-    set mark-directories on
+# If set to on, completed directory names have a slash appended. For example
+# 'cd sr[tab]' expands to 'src/' when mark-directories is on and expands to
+# 'src' when mark-directories is off.
+set mark-directories on
 
     # If set to on, history lines that have been modified are displayed with a
     # preceding asterisk (*). For example, if you scroll to a previous command
@@ -175,8 +187,3 @@ $if mode=emacs
         "\e[F": end-of-line
     $endif
 $endif
-
-for file in $(find ${HOME} -maxdepth 1 -type f -regextype posic-basic -regex ".*/.\+\.inputrc"); do
-    [ -e ${HOME}/.rcfiles.debug ] && echo "Sourcing ${file}..." >&2
-    source ${file}
-done
